--- a/app/src/main/res/layout/activity_menu__publi.xml
+++ b/app/src/main/res/layout/activity_menu__publi.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@drawable/background2"
+    android:background="@mipmap/background2"
     android:padding="0dp"
     android:layout_margin="0dp"
     android:id="@+id/fondojuego"
@@ -79,6 +79,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
-
-
