--- a/app/src/main/res/layout/fragment_minijuego.xml
+++ b/app/src/main/res/layout/fragment_minijuego.xml
@@ -1,7 +1,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.app.ala.tunerstudio.Minijuego"
+    tools:context="com.studio.aal.tunerstudio.Minijuego"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:layout_gravity="top">
@@ -9,14 +9,14 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/cosas1"
+        android:src="@mipmap/cosas1"
         android:layout_marginTop="-58dp"
         />
 
     <!--<ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/crono"
+        android:background="@mipmap/crono"
         android:layout_marginTop="-60dp"
         android:alpha="0.2"
         android:id="@+id/cuadrocrono"
@@ -24,12 +24,19 @@
 
     <Chronometer
         android:id="@+id/cuadrocrono"
+        android:format="%s"
+        android:textSize="40dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/crono"
-        android:layout_marginTop="-60dp"
+        android:background="@mipmap/crono"
         android:alpha="0.2"
+        android:gravity="center"
+        android:layout_marginTop="-40dp"
+        android:paddingTop="30dp"
+        android:textColor="#FF544A45"
+
         />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -51,12 +58,12 @@
             android:id="@+id/selectNote"
             android:orientation="horizontal"
             android:gravity="bottom"
-            android:layout_marginBottom="100dp">
+            android:layout_marginBottom="70dp">
 
             <Button
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/boton"
+                android:background="@mipmap/boton"
                 android:id="@+id/b1"
                 android:layout_margin="15dp"
                 />
@@ -64,7 +71,7 @@
             <Button
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/boton"
+                android:background="@mipmap/boton"
                 android:id="@+id/b2"
                 android:layout_margin="15dp"
                 />
@@ -72,12 +79,18 @@
             <Button
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/boton"
+                android:background="@mipmap/boton"
                 android:id="@+id/b3"
                 android:layout_margin="15dp"
                 />
 
         </LinearLayout>
     </RelativeLayout>
-
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/layouterror"
+        android:background="#ff0000">
+    </RelativeLayout>
 </RelativeLayout>
+
