--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!--<color name="back_color">#503a2c</color>
+    <color name="bb">#e6caac</color>
+    <color name="tex">#500f8e</color>-->
+
+    <color name="back_color">#ff0000</color>
+    <color name="bb">#00ff00</color>
+    <color name="tex">#0000ff</color>
 </resources>
